MESSAGE("Building test ...")

FILE(GLOB_RECURSE TEST_C_FILES ${CMAKE_SOURCE_DIR}/htimer*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

ADD_EXECUTABLE(test ${TEST_C_FILES})
set_target_properties(test PROPERTIES OUTPUT_NAME "test")

