MESSAGE("Building test ...")

FILE(GLOB_RECURSE SLEEP_C_FILES ${CMAKE_SOURCE_DIR}/htimer*.c ${CMAKE_CURRENT_SOURCE_DIR}/sleep.c)
FILE(GLOB_RECURSE SELECT_C_FILES ${CMAKE_SOURCE_DIR}/htimer*.c ${CMAKE_CURRENT_SOURCE_DIR}/select.c)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

ADD_EXECUTABLE(sleep ${SLEEP_C_FILES})
ADD_EXECUTABLE(select ${SELECT_C_FILES})
set_target_properties(sleep PROPERTIES OUTPUT_NAME "sleep")
set_target_properties(select PROPERTIES OUTPUT_NAME "select")

